# font_renamer

./: .coveragerc  README.md  pyproject.toml
font_renamer/: _mapped_values.py  models.py  name_record_mapper.py  opentype_name_constants.py  platforms.py  table_name.py  types.py
tests/: conftest.py  hypothesis_strategies.py  test_constants.py  test_custom_types.py  test_models.py  test_name_record_mapper.py  test_ot_constants.py  test_platforms.py  test_table_name.py  test_utils.py  types.py  utils.py
